Add portfolio popup and portfolio section

--- a/portfolio.html
+++ b/portfolio.html
@@ -362,7 +362,7 @@
                             <div class="portfolio-item-img">
                                 <img src="/screenshots/Project1/sc1.png" alt="portfolio" data-screenshots="#">
                                 <!-- view porject btn -->
-                                <span class="view-prject"> view project </span>
+                                <span class="view-project"> view project </span>
                             </div>
                             <p class="portfolio-item-title">personal portfolio</p>
                             <!-- portfolio item details -->
@@ -398,7 +398,7 @@
                                 img/portfolio1/screenshots/Project2/Vendor_page.PNG,
                                 img/portfolio1/screenshots/Project2/Vendor_page_add.PNG,">
                                 <!-- view porject btn -->
-                                <span class="view-prject"> view project </span>
+                                <span class="view-project"> view project </span>
                             </div>
                             <p class="portfolio-item-title">Bob's Nursery</p>
                             <!-- portfolio item details -->
@@ -429,9 +429,9 @@
                             <div class="portfolio-item-img">
                                 <img src="/screenshots/Project3/snakegame.png" alt="portfolio" data-screenshots="#">
                                 <!-- view porject btn -->
-                                <span class="view-prject"> view project </span>
+                                <span class="view-project"> view project </span>
                             </div>
-                            <p class="portfolio-item-title">personal portfolio</p>
+                            <p class="portfolio-item-title">Snake Game</p>
                             <!-- portfolio item details -->
                             <div class="portfolio-item-details">
                                 <div class="row">
@@ -460,6 +460,47 @@
         </section>
         <!-- portfolio section end -->
 
+        <!-- portfolio popup -->
+        <div class="portfolio-popup">
+            <div class="pp-details">
+                <div class="pp-details-inner">
+                    <div class="pp-title">
+                        <h2>personal portfolio</h2>
+                        <p> Category - <span class="pp-project-category">Web application</span></p>
+                    </div>
+                    <div class="pp-project-details">
+                        <div class="row">
+                            <div class="description">
+                                <h3>Project Brief:</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                                    do eiusmod</p>
+                            </div>
+                            <div class="info">
+                                <h3>Project info</h3>
+                                <ul>
+                                    <li>Date - <span> 2022 </span></li>
+                                    <li> Tolls - <span> HTML5, CSS, JavaScript </span></li>
+                                    <li>Website - <span> <a href="#">www.domain.com</a> </span></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="separator"></div>
+            <div class="pp-main">
+                <div class="pp-main-inner">
+                    <div class="pp-project-details-btn outer-shadow hover-in-shadow">Project Details <i class="fas fa-plus"></i></div>
+                    <div class="pp-close outer-shadow hover-in-shadow">&times;</div>
+                    <img src="/screenshots/Project2/Landing.PNG" alt="img" class="pp-img outer-shadow">
+                    <div class="pp-counter">1 of 6</div>
+                </div>
+                <!-- pp navigation -->
+                <div class="pp-prev"><i class="fas fa-play"></i></div>
+                <div class="pp-next"><i class="fas fa-play"></i></div>
+            </div>
+        </div>
+        <!-- portfolio popup end -->
 
         <!--Main JavaScript -->
         <script src="main.js"></script>
