add javascript function

--- a/portfolio.html
+++ b/portfolio.html
@@ -350,14 +350,14 @@
                         <span class="filter-item" data-target="web-application">web application</span>
                         <span class="filter-item" data-target="photoshop">photoshop</span>
                         <span class="filter-item" data-target="mobile-app">mobile app</span>
-                        <span class="filter-item" data-target="e-commerce">e commerce</span>
+                        <!-- <span class="filter-item" data-target="e-commerce">e commerce</span> -->
                     </div>
                 </div>
                 <!-- portfolio filter  end -->
                 <!-- portfolio items -->
                 <div class="row portfolio-items">
                     <!-- portfolio item  -->
-                    <div class="portfolio-item">
+                    <div class="portfolio-item" data-category="web-application">
                         <div class="portfolio-item-inner outer-shadow">
                             <div class="portfolio-item-img">
                                 <img src="/screenshots/Project1/sc1.png" alt="portfolio" data-screenshots="#">
@@ -388,7 +388,7 @@
                     </div>
                     <!-- portfolio item end -->
                     <!-- portfolio item  -->
-                    <div class="portfolio-item">
+                    <div class="portfolio-item"data-category="photoshop">
                         <div class="portfolio-item-inner outer-shadow">
                             <div class="portfolio-item-img">
                                 <img src="/screenshots/Project2/Landing.PNG" alt="Bob's nursery" data-screenshots="img/portfolio1/screenshots/Project2/Account.png,
@@ -424,7 +424,7 @@
                     </div>
                     <!-- portfolio item end -->
                     <!-- portfolio item  -->
-                    <div class="portfolio-item">
+                    <div class="portfolio-item" data-category="mobile-app">
                         <div class="portfolio-item-inner outer-shadow">
                             <div class="portfolio-item-img">
                                 <img src="/screenshots/Project3/snakegame.png" alt="portfolio" data-screenshots="#">
