--- a/portfolio.html
+++ b/portfolio.html
@@ -396,7 +396,8 @@
                 <div class="portfolio-item" data-category="web-application">
                     <div class="portfolio-item-inner outer-shadow">
                         <div class="portfolio-item-img">
-                            <img src="/screenshots/Project1/sc1.png" alt="portfolio" data-screenshots="/screenshots/Project1/sc1.png">
+                            <img src="/screenshots/Project1/sc1.png" alt="portfolio"
+                                data-screenshots="/screenshots/Project1/sc1.png">
                             <!-- view porject btn -->
                             <span class="view-project"> view project </span>
                         </div>
@@ -506,8 +507,80 @@
     </section>
     <!-- portfolio section end -->
 
-    <!-- portfolio popup -->
+    <!-- 1/14/2022 add contact section  -->
+    <!-- contact section -->
+    <section class="contact-section section">
+        <div class="container">
+            <div class="row">
+                <div class="section-title">
+                    <h2 data-heading="contact">Get In Touch</h2>
+                </div>
+            </div>
+            <div class="row">
+                <!-- contact item start -->
+                <div class="contact-item">
+                    <div class="contact-item-inner outer-shadow">
+                        <i class="fas fa-phone"></i>
+                        <span> Phone </span>
+                        <p> 617 797 5606</p>
+                    </div>
+                </div>
+                <!-- contact item end -->
+                <!-- contact item start -->
+                <div class="contact-item">
+                    <div class="contact-item-inner outer-shadow">
+                        <i class="fas fa-envelope"></i>
+                        <span> Email </span>
+                        <p> lnguyen1410@gmail.com </p>
+                    </div>
+                </div>
+                <!-- contact item end -->
+                <!-- contact item start -->
+                <div class="contact-item">
+                    <div class="contact-item-inner outer-shadow">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <span> Address </span>
+                        <p> 18 Stadium Rd Malden, MA 02148</p>
+                    </div>
+                </div>
+                <!-- contact item end -->
+            </div>
+            <div class="row">
+                <div class="contact-form">
+                    <form>
+                        <div class="row">
+                            <div class="w-50">
+                                <div class="input-group outer-shadow hover-in-shadow">
+                                    <input type="text" placeholder="Name" class="input-control">
+                                </div>
+                                <div class="input-group outer-shadow hover-in-shadow">
+                                    <input type="text" placeholder="Email" class="input-control">
+                                </div>
+                                <div class="input-group outer-shadow hover-in-shadow">
+                                    <input type="text" placeholder="Subject" class="input-control">
+                                </div>
+                            </div>
+                            <div class="w-50">
+                                <div class="input-group outer-shadow hover-in-shadow">
+                                    <textarea class="input-control" placeholder="Message"></textarea>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="submit-btn">
+                                <button type="submit" class="btn-1 outer-shadow hover-in-shadow">Send Message</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
 
+    </section>
+    <!-- contact section end -->
+
+
+    <!-- portfolio popup -->
     <div class="pp portfolio-popup">
         <div class="pp-details">
             <div class="pp-details-inner">
@@ -544,7 +617,7 @@
                 <img src="screenshots/Project1/sc1.png" alt="img" class="pp-img outer-shadow">
                 <div class="pp-counter">1 of 6</div>
             </div>
-            <div class ="pp-loader"> 
+            <div class="pp-loader">
                 <div></div>
             </div>
             <!-- pp navigation -->
