add reponsive css

--- a/portfolio.html
+++ b/portfolio.html
@@ -8,18 +8,27 @@
     <!-- css link-->
     <link href="portfolio.css" rel="stylesheet" type="text/css">
     <link href="color-1.css" rel="stylesheet" type="text/css">
+    <link href="responsive.css" rel="stylesheet" type="text/css">
     <!--font -->
     <link href="/all.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
+
+    <!-- preloader  -->
+    <div class="preloader">
+        <div class="box">
+            <div></div><div></div><div></div>
+        </div>
+    </div>
+    <!-- preloader end -->
     <!-- header -->
 
     <header class="header">
         <div class="container">
             <div class="row justify-content-between">
                 <div class="logo">
-                    <a href="portfolio.html">a</a>
+                    <a href="portfolio.html">b</a>
                 </div>
                 <div class="ham-btn outer-shadow hover-in-shadow">
                     <span>
@@ -512,7 +521,6 @@
     </section>
     <!-- portfolio section end -->
 
-    <!-- 1/14/2022 add contact section  -->
     <!-- contact section -->
     <section class="contact-section section" id="contact">
         <div class="container">
@@ -545,39 +553,10 @@
                     <div class="contact-item-inner outer-shadow">
                         <i class="fas fa-map-marker-alt"></i>
                         <span> Address </span>
-                        <p> 18 Stadium Rd Malden, MA 02148</p>
+                        <p> Malden, MA 02148</p>
                     </div>
                 </div>
                 <!-- contact item end -->
-            </div>
-            <div class="row">
-                <div class="contact-form">
-                    <form>
-                        <div class="row">
-                            <div class="w-50">
-                                <div class="input-group outer-shadow hover-in-shadow">
-                                    <input type="text" placeholder="Name" class="input-control">
-                                </div>
-                                <div class="input-group outer-shadow hover-in-shadow">
-                                    <input type="text" placeholder="Email" class="input-control">
-                                </div>
-                                <div class="input-group outer-shadow hover-in-shadow">
-                                    <input type="text" placeholder="Subject" class="input-control">
-                                </div>
-                            </div>
-                            <div class="w-50">
-                                <div class="input-group outer-shadow hover-in-shadow">
-                                    <textarea class="input-control" placeholder="Message"></textarea>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="submit-btn">
-                                <button type="submit" class="btn-1 outer-shadow hover-in-shadow">Send Message</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
             </div>
         </div>
 
@@ -590,25 +569,11 @@
         <div class="pp-details">
             <div class="pp-details-inner">
                 <div class="pp-title">
-                    <h2>personal portfolio</h2>
-                    <p>Category - <span class="pp-project-category">Web Application</span></p>
+                    <h2></h2>
+                    <p>Category - <span class="pp-project-category"></span></p>
                 </div>
                 <div class="pp-project-details">
-                    <div class="row">
-                        <div class="description">
-                            <h3>Project Brief:</h3>
-                            <p>I'm Long Nguyen, a Software Engineering. This is my portfolio, it contains what I do,
-                                what have I done, and my education,</p>
-                        </div>
-                        <div class="info">
-                            <h3>Project info</h3>
-                            <ul>
-                                <li>Date - <span> 2022 </span></li>
-                                <li> Tools - <span> HTML5, CSS, JavaScript </span></li>
-                                <li>Website - <span> <a href="#">www.domain.com</a> </span></li>
-                            </ul>
-                        </div>
-                    </div>
+                
                 </div>
             </div>
         </div>
@@ -620,7 +585,7 @@
                         class="fas fa-plus"></i></div>
                 <div class="pp-close outer-shadow hover-in-shadow">&times;</div>
                 <img src="screenshots/Project1/sc1.png" alt="img" class="pp-img outer-shadow">
-                <div class="pp-counter">1 of 6</div>
+                <div class="pp-counter"></div>
             </div>
             <div class="pp-loader">
                 <div></div>
@@ -631,23 +596,6 @@
         </div>
     </div>
     <!-- portfolio popup end -->
-    <!-- style switcher  -->
-    <div class="style-switcher">
-        <div class="style-toggler">
-            <i class="fas fa-cog fa-spin"></i>
-        </div>
-        <div class="day-night">
-            <i class="fas fa-moon"></i>
-        </div>
-        <h4>Theme Colors</h4>
-    </div>
-    <!-- style switcher end -->
-
-
-
-
-
-
     <!--Main JavaScript -->
     <script src="main.js"></script>
 </body>
