change hire me button

--- a/portfolio.html
+++ b/portfolio.html
@@ -156,7 +156,7 @@
                 <div class="about-info">
                     <p><span>Hi! I'm Long Nguyen. I'm a Software Engnineering</span>This is all about my life</p>
                     <a href="Resume-Long.pdf" class="btn-1 outer-shadow hover-in-shadow">My Resume</a>
-                    <a href="#" class="link-item btn-1 outer-shadow hover-in-shadow">Hire me</a>
+                    <a href="#contact" class="link-item btn-1 outer-shadow hover-in-shadow">Hire me</a>
                 </div>
             </div>
             <!-- About tabs -->
