change the content, and the profile

--- a/portfolio.html
+++ b/portfolio.html
@@ -125,7 +125,7 @@
 
                 <div class="home-img">
                     <div class="img-box inner-shadow">
-                        <img class="outer-shadow" src="/profile-pic.jpg" alt="profic-pic">
+                        <img class="outer-shadow" src="/profile.jpg" alt="profic-pic">
                     </div>
                 </div>
             </div>
@@ -148,14 +148,18 @@
                     </div>
                     <!-- Social links -->
                     <div class="social-links">
-                        <a href="#" class="outer-shadow hover-in-shadow"><i class="fab fa-linkedin"></i></a>
-                        <a href="#" class="outer-shadow hover-in-shadow"><i class="fab fa-github"></i></a>
-                        <a href="#" class="outer-shadow hover-in-shadow"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.linkedin.com/in/long-nguyen-7a070b1ba/" class="outer-shadow hover-in-shadow" target="blank"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://github.com/billnguyen1410" class="outer-shadow hover-in-shadow" target="blank"><i class="fab fa-github"></i></a>
+                        <a href="https://www.facebook.com/billnguyen1410" class="outer-shadow hover-in-shadow" target="blank"><i class="fab fa-facebook"></i></a>
                     </div>
                 </div>
                 <div class="about-info">
-                    <p><span>Hi! I'm Long Nguyen. I'm a Software Engnineering</span>This is all about my life</p>
-                    <a href="Resume-Long.pdf" class="btn-1 outer-shadow hover-in-shadow">My Resume</a>
+                    <p><span>Hi! I'm Long Nguyen.</span> I have a Bachelor of Science degree in Computer Science.
+                        I'm motivated to develop my skill as software engineer, specifically web development (Full-Stack developer).
+                        I first chose Chemical Engineering as my major, but I realized I love coding more than doing research in the lab.
+                        Here are my Resume, Contact, Skills, Experiences, Education, and Projects.
+                    </p>
+                    <a href="Resume-Long.pdf" class="btn-1 outer-shadow hover-in-shadow" target="blank">My Resume</a>
                     <a href="#contact" class="link-item btn-1 outer-shadow hover-in-shadow">Hire me</a>
                 </div>
             </div>
@@ -332,8 +336,8 @@
                         </div>
                         <h3>Full-Stack Developer</h3>
                         <p>I learned Java at school, but I was in love with the moment I learned JavaScript.
-                            back-end is not my strength, but to be a full-stack developer, I must master back-end and
-                            <front-end class=""></front-end>
+                            I have experience doing full stack web application. For front-end, I use React. For database,
+                            I use MySQL. For back-end, I use PHP.
                         </p>
                     </div>
                 </div>
@@ -373,9 +377,8 @@
                         <div class="icon inner-shadow">
                             <i class="fas fa-bullhorn"></i>
                         </div>
-                        <h3>great support</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                            do eiusmod.
+                        <h3>responsibility</h3>
+                        <p>Tasks must be done on time or before time 
                         </p>
                     </div>
                 </div>
@@ -411,7 +414,11 @@
                     <div class="portfolio-item-inner outer-shadow">
                         <div class="portfolio-item-img">
                             <img src="/screenshots/Project1/sc1.png" alt="portfolio"
-                                data-screenshots="/screenshots/Project1/sc1.png">
+                                data-screenshots="/screenshots/Project1/sc1.png,
+                                /screenshots/Project1/sc2.png,
+                                /screenshots/Project1/sc3.png,
+                                /screenshots/Project1/sc4.png,
+                                /screenshots/Project1/sc5.png">
                             <!-- view porject btn -->
                             <span class="view-project"> view project </span>
                         </div>
@@ -428,7 +435,7 @@
                                     <h3>Project info</h3>
                                     <ul>
                                         <li>Date - <span> 2022 </span></li>
-                                        <li> Tools - <span> HTML5, CSS, JavaScript </span></li>
+                                        <li> Tools - <span> HTML5, CSS, JavaScript, VS Code </span></li>
                                         <li>Website - <span> <a href="#">www.domain.com</a> </span></li>
                                     </ul>
                                 </div>
@@ -481,7 +488,7 @@
                 <div class="portfolio-item" data-category="java">
                     <div class="portfolio-item-inner outer-shadow">
                         <div class="portfolio-item-img">
-                            <img src="/screenshots/Project3/snakegame.png" alt="portfolio" data-screenshots="#">
+                            <img src="/screenshots/Project3/snakegame.png" alt="portfolio" data-screenshots="/screenshots/Project3/snakegame.png">
                             <!-- view porject btn -->
                             <span class="view-project"> view project </span>
                         </div>
