renamed resume, adjust content in index

--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
                                     <ul>
                                         <li>Date - <span> 2022 </span></li>
                                         <li> Tools - <span> HTML5, CSS, JavaScript, VS Code </span></li>
-                                        <li>Website - <span> <a href="#">www.domain.com</a> </span></li>
+                                        <li>Website - <span> <a href="#">www.itslongg.com</a> </span></li>
                                     </ul>
                                 </div>
                             </div>
@@ -542,7 +542,7 @@
                     <div class="contact-item-inner outer-shadow">
                         <i class="fas fa-phone"></i>
                         <span> Phone </span>
-                        <p> 617 797 5606</p>
+                        <p> 617-797-5606</p>
                     </div>
                 </div>
                 <!-- contact item end -->
