changed resume, changed b logo to index

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Personal Portfolio Website</title>
+    <title>Long Nguyen Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- css link-->
     <link href="portfolio.css" rel="stylesheet" type="text/css">
@@ -28,7 +28,7 @@
         <div class="container">
             <div class="row justify-content-between">
                 <div class="logo">
-                    <a href="portfolio.html">b</a>
+                    <a href="index.html">b</a>
                 </div>
                 <div class="ham-btn outer-shadow hover-in-shadow">
                     <span>
