change content of projects

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 <li><a href="#home" class="link-item inner-shadow active">home</a></li>
                 <li><a href="#about" class="link-item outer-shadow hover-in-shadow">about</a></li>
                 <li><a href="#service" class="link-item outer-shadow hover-in-shadow">services</a></li>
-                <li><a href="#portfolio" class="link-item outer-shadow hover-in-shadow">portfolio</a></li>
+                <li><a href="#portfolio" class="link-item outer-shadow hover-in-shadow">Projects</a></li>
                 <li><a href="#contact" class="link-item outer-shadow hover-in-shadow">contact</a></li>
             </ul>
         </div>
@@ -299,7 +299,7 @@
         <div class="container">
             <div class="row">
                 <div class="section-title">
-                    <h2 data-heading="services"> What I do</h2>
+                    <h2 data-heading="services"> What I can do</h2>
                 </div>
             </div>
             <div class="row">
@@ -393,7 +393,7 @@
         <div class="container">
             <div class="row">
                 <div class="section-title">
-                    <h2 data-heading="portfolio">Lastest Works</h2>
+                    <h2 data-heading="project">Lastest Works</h2>
                 </div>
             </div>
             <!-- portfolio filter -->
