--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         I first chose Chemical Engineering as my major, but I realized I love coding more than doing research in the lab.
                         Here are my Resume, Contact, Skills, Experiences, Education, and Projects.
                     </p>
-                    <a href="Resume-Long1.pdf" class="btn-1 outer-shadow hover-in-shadow" target="blank">My Resume</a>
+                    <a href="Long-Nguyen-Resume.pdf" class="btn-1 outer-shadow hover-in-shadow" target="blank">My Resume</a>
                     <a href="#contact" class="link-item btn-1 outer-shadow hover-in-shadow">Hire me</a>
                 </div>
             </div>
@@ -513,6 +513,35 @@
                                         <li>Date - <span> 2022 </span></li>
                                         <li> Tools - <span> Java, Data Structure, Netbeans </span></li>
                                         <li>Group Member - <span> Truman Ngo, Ronny Suon, Andrew, Long Nguyen </span>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- portfolio item details end -->
+                        <!-- portfolio item  -->
+                <div class="portfolio-item" data-category="java">
+                    <div class="portfolio-item-inner outer-shadow">
+                        <div class="portfolio-item-img">
+                            <img src="/screenshots/Project4/TODOLIST.png" alt="portfolio" data-screenshots="/screenshots/Project4/TODOLIST(2).png,
+                            /screenshots/Project4/TODOLIST(3).png">
+                            <!-- view porject btn -->
+                            <span class="view-project"> view project </span>
+                        </div>
+                        <p class="portfolio-item-title">To Do List</p>
+                        <!-- portfolio item details -->
+                        <div class="portfolio-item-details">
+                            <div class="row">
+                                <div class="description">
+                                    <h3>Project Brief:</h3>
+                                    <p>With a guidance from Angela Yu - the instructor from Udemy, I successfully created a back-end app with todo list.
+                                    </p>
+                                </div>
+                                <div class="info">
+                                    <h3>Project info</h3>
+                                    <ul>
+                                        <li>Date - <span> 2022 </span></li>
+                                        <li> Tools - <span> JavaScript, EJS, HTML, CSS  </span></li>
                                         </li>
                                     </ul>
                                 </div>
