--- a/index.html
+++ b/index.html
@@ -518,9 +518,11 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
                         <!-- portfolio item details end -->
                         <!-- portfolio item  -->
-                <div class="portfolio-item" data-category="java">
+                <div class="portfolio-item" data-category="web-application">
                     <div class="portfolio-item-inner outer-shadow">
                         <div class="portfolio-item-img">
                             <img src="/screenshots/Project4/TODOLIST.png" alt="portfolio" data-screenshots="/screenshots/Project4/TODOLIST(2).png,
