add full-stack web application (capstone project)

--- a/index.html
+++ b/index.html
@@ -485,6 +485,43 @@
                 </div>
                 <!-- portfolio item end -->
                 <!-- portfolio item  -->
+                <div class="portfolio-item" data-category="web-application">
+                    <div class="portfolio-item-inner outer-shadow">
+                        <div class="portfolio-item-img">
+                            <img src="/screenshots/Project5/Capstone1.png" alt="Restaurant app" data-screenshots="/screenshots/Project5/Capstone1.png,
+                            /screenshots/Project5/Capstone2.png,
+                            /screenshots/Project5/Capstone3.png,
+                            /screenshots/Project5/Capstone4.png,
+                            /screenshots/Project5/Capstone5.png,
+                            /screenshots/Project5/Capstone6.png">
+                            <!-- view porject btn -->
+                            <span class="view-project"> view project </span>
+                        </div>
+                        <p class="portfolio-item-title">Restaurant Web Application</p>
+                        <!-- portfolio item details -->
+                        <div class="portfolio-item-details">
+                            <div class="row">
+                                <div class="description">
+                                    <h3>Project Brief:</h3>
+                                    <p>This is a full-stack web application for restaurant, client side has 2 main functionality: Admin functionality
+                                        and Customer functionality; Admin functionality has 3 side-functions that would be: Add, Delete, Update item from the menu.
+                                        Customer functionality has 3 side-functions: View Menu, Choose items from the menu and view Cart. This full-stack web application is used MERN stack.
+
+                                    </p>
+                                </div>
+                                <div class="info">
+                                    <h3>Project info</h3>
+                                    <ul>
+                                        <li>Date - <span> 2022 </span></li>
+                                        <li> Tools - <span> MongoDb, ExpressJs, ReactJs, NodeJs, JavaScript </span></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- portfolio item details end -->
+                    </div>
+                </div>
+                <!-- portfolio item  -->
                 <div class="portfolio-item" data-category="java">
                     <div class="portfolio-item-inner outer-shadow">
                         <div class="portfolio-item-img">
@@ -553,6 +590,7 @@
                     </div>
                 </div>
                 <!-- portfolio item end -->
+
             </div>
             <!-- portfolio items end -->
         </div>
